--- a/resources/index.html
+++ b/resources/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="http://d3js.org/d3.v3.js"></script>
+    <script src="http://cpettitt.github.io/project/graphlib-dot/v0.5.2/graphlib-dot.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <script src="/js/app.js" type="text/javascript"></script>
+    <script src="/js/dagre-d3.js" type="text/javascript"></script>
   </body>
 </html>
